k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-ecommerce-deployment
#  namespace: web-application
  labels:
    app: ecommerce-application
spec:
  replicas: 8
  selector:
    matchLabels:
      app: ecommerce-application
  template:
    metadata:
      labels:
        app: ecommerce-application
    spec:
      containers:
        - name: application-server-container
          image: srinu641/spring-application-k8s:v1.0
          ports:
            - containerPort: 1199
---
apiVersion: v1
kind: Service
metadata:
  name: spring-ecommerce-application-svc
#  namespace: web-application
  labels:
    app: zomato-svc
spec:
  type: NodePort
  ports:
    - port: 1199
      targetPort: 1199
      nodePort: 30001
  selector:
    app: ecommerce-application
---
#readinessProbe:
#  httpGet:
#    path: /
#    port: 1199
#  initialDelaySeconds: 5
#  periodSeconds: 10
#livenessProbe:
#  httpGet:
#    path: /
#    port: 1199
#  initialDelaySeconds: 10
#  periodSeconds: 30
#startupProbe:
#  httpGet:
#    path: /
#    port: 1199
#  initialDelaySeconds: 10
#  periodSeconds: 30
