k8s/ingress.yml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: minimal-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  ingressClassName: nginx-example
#  rules:
#    - http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: spring-app-svc
#                port:
#                  number: 1199
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
    - host: "spring.foo.om"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: spring-app-svc
                port:
                  number: 1199
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ingress-resource-backend
#spec:
#  defaultBackend:
#    resource:
#      apiGroup: k8s.example.com
#      kind: StorageBucket
#      name: static-assets
#  rules:
#    - http:
#        paths:
#          - path: /
#            pathType: ImplementationSpecific
#            backend:
#              resource:
#                apiGroup: k8s.example.com
#                kind: StorageBucket
#                name: icon-assets

---
